[gd_scene load_steps=17 format=3 uid="uid://jpel4dfak3mm"]

[ext_resource type="PackedScene" uid="uid://b3l8pjglwhk1g" path="res://Scenes/MainScenes/world_map.tscn" id="1_jjgbg"]
[ext_resource type="Script" uid="uid://dxa5m7dv0fs3j" path="res://Scripts/MainScripts/game_scene.gd" id="1_lohlh"]
[ext_resource type="Texture2D" uid="uid://t4ay36k6mtvi" path="res://Resources/UI/Buttons/button_round_border.png" id="2_4bvgx"]
[ext_resource type="Script" uid="uid://d32a82m516b7w" path="res://Scripts/UI/ui.gd" id="3_0h1f8"]
[ext_resource type="Texture2D" uid="uid://djxhp4s0yjp3y" path="res://Resources/Towers/towerDefense_tile249.png" id="3_3mbwn"]
[ext_resource type="Script" uid="uid://dejioli3i5fyo" path="res://Scripts/UI/preview_layer.gd" id="3_kilg5"]
[ext_resource type="Texture2D" uid="uid://4xvu43538p0d" path="res://Resources/Towers/towerDefense_tile251.png" id="4_jwv4s"]
[ext_resource type="Texture2D" uid="uid://bm1xx24hx6vns" path="res://Resources/KennyDungeonScribbles/PNG/Double (128px)/campfire.png" id="7_2usgn"]
[ext_resource type="Texture2D" uid="uid://c8hmcvc2wpbiq" path="res://Resources/UI/kenney_game-icons/PNG/Black/2x/pause.png" id="8_0h1f8"]
[ext_resource type="Texture2D" uid="uid://dyjbd07rr0ain" path="res://Resources/KennyDungeonScribbles/PNG/Default (64px)/wall_corner.png" id="8_jvyjn"]
[ext_resource type="PackedScene" uid="uid://d4npm3v55typf" path="res://Scenes/Player/player.tscn" id="9_674w2"]
[ext_resource type="Texture2D" uid="uid://c6d2rn838qjlb" path="res://Resources/UI/kenney_game-icons/PNG/Black/2x/fastForward.png" id="9_sl8sw"]
[ext_resource type="PackedScene" uid="uid://bep070odlbo2q" path="res://Scenes/UI/pause_menue.tscn" id="11_jvyjn"]
[ext_resource type="FontFile" uid="uid://bv5wv5mjystu2" path="res://Resources/Fonts/Kenney Future Narrow.ttf" id="11_sl8sw"]
[ext_resource type="PackedScene" uid="uid://38jimit4omgo" path="res://Scenes/UI/lose_screen.tscn" id="13_jvyjn"]
[ext_resource type="PackedScene" uid="uid://dg5gmgcabn6b4" path="res://Scenes/UI/win_screen.tscn" id="14_541wh"]

[node name="GameScene" type="Node2D" node_paths=PackedStringArray("BaseLayer", "BuildingLayer", "WallLayer", "lose_screen", "win_screen") groups=["game_scene"]]
script = ExtResource("1_lohlh")
BaseLayer = NodePath("WorldMap/BaseLayer")
BuildingLayer = NodePath("WorldMap/BuildingLayer")
WallLayer = NodePath("WorldMap/WallLayer")
lose_screen = NodePath("UI/LoseScreen")
win_screen = NodePath("UI/WinScreen")

[node name="WorldMap" parent="." instance=ExtResource("1_jjgbg")]

[node name="SpawnPos" type="Marker2D" parent="WorldMap"]
position = Vector2(2414, 1545)

[node name="UI" type="CanvasLayer" parent="." node_paths=PackedStringArray("wave_label", "stone_label", "wood_label", "high_wave_label_lost", "high_wave_label_won")]
script = ExtResource("3_0h1f8")
wave_label = NodePath("HUD/WaveLabel")
stone_label = NodePath("HUD/PlayerInfo/MarginContainer/HBoxContainer/StoneLabel")
wood_label = NodePath("HUD/PlayerInfo/MarginContainer/HBoxContainer/WoodLabel")
high_wave_label_lost = NodePath("LoseScreen/ColorRect/MarginContainer/VBoxContainer/HighWave/HighestWave")
high_wave_label_won = NodePath("WinScreen/ColorRect/MarginContainer/VBoxContainer/HighWave/HighestWave")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="BuildBar" type="HBoxContainer" parent="UI/HUD"]
custom_minimum_size = Vector2(1000, 200)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -139.0
offset_right = 500.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 0

[node name="center_building_t1" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("2_4bvgx")
ignore_texture_size = true
stretch_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="UI/HUD/BuildBar/center_building_t1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35

[node name="TextureRect" type="TextureRect" parent="UI/HUD/BuildBar/center_building_t1/MarginContainer"]
layout_mode = 2
texture = ExtResource("7_2usgn")

[node name="gun_t1" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("2_4bvgx")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="UI/HUD/BuildBar/gun_t1"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -50.0
offset_right = 56.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3mbwn")

[node name="missile_t1" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("2_4bvgx")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="UI/HUD/BuildBar/missile_t1"]
texture_filter = 1
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -100.0
offset_right = 101.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_jwv4s")

[node name="wall_t1" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("2_4bvgx")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="UI/HUD/BuildBar/wall_t1"]
texture_filter = 1
custom_minimum_size = Vector2(75, 75)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -37.5
offset_right = 37.5
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_jvyjn")

[node name="GameButtons" type="MarginContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -192.0
offset_right = 153.0
offset_bottom = 192.0
grow_vertical = 2
theme_override_constants/margin_left = 25

[node name="GameControls" type="VBoxContainer" parent="UI/HUD/GameButtons"]
custom_minimum_size = Vector2(128, 384)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 64

[node name="2xSpeed" type="TextureButton" parent="UI/HUD/GameButtons/GameControls"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("9_sl8sw")
stretch_mode = 0

[node name="PauseButton" type="TextureButton" parent="UI/HUD/GameButtons/GameControls"]
process_mode = 3
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
toggle_mode = true
texture_normal = ExtResource("8_0h1f8")
stretch_mode = 0

[node name="PlayerInfo" type="VBoxContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -200.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="UI/HUD/PlayerInfo"]
layout_mode = 2
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="VBoxContainer" parent="UI/HUD/PlayerInfo/MarginContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 50

[node name="StoneLabel" type="Label" parent="UI/HUD/PlayerInfo/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_font_sizes/font_size = 64
text = "stone: 0"

[node name="WoodLabel" type="Label" parent="UI/HUD/PlayerInfo/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_font_sizes/font_size = 64
text = "wood: 0"

[node name="WaveLabel" type="Label" parent="UI/HUD"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.792
anchor_right = 1.0
anchor_bottom = 0.093
offset_left = -100.64
offset_top = 100.0
offset_right = -100.0
offset_bottom = 99.56
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_sl8sw")
theme_override_font_sizes/font_size = 64
text = "Time Until Next Wave:"

[node name="Timer" type="Timer" parent="UI/HUD/WaveLabel"]
one_shot = true

[node name="PauseMenue" parent="UI/HUD" instance=ExtResource("11_jvyjn")]

[node name="ColorRect" parent="UI/HUD/PauseMenue" index="0"]
mouse_filter = 2
color = Color(3.4594e-07, 0.13318, 0.13318, 0.643137)

[node name="LoseScreen" parent="UI" instance=ExtResource("13_jvyjn")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -757.0
offset_top = -420.0
offset_right = -757.0
offset_bottom = -420.0

[node name="WinScreen" parent="UI" instance=ExtResource("14_541wh")]
visible = false
offset_left = 144.0
offset_top = 67.0
offset_right = 144.0
offset_bottom = 67.0

[node name="PreviewLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true
script = ExtResource("3_kilg5")

[node name="Player" parent="." instance=ExtResource("9_674w2")]

[node name="Bullets" type="Node2D" parent="."]

[connection signal="button_down" from="UI/HUD/GameButtons/GameControls/2xSpeed" to="UI" method="_on_x_speed_button_down"]
[connection signal="button_up" from="UI/HUD/GameButtons/GameControls/2xSpeed" to="UI" method="_on_x_speed_button_up"]
[connection signal="pressed" from="UI/HUD/GameButtons/GameControls/2xSpeed" to="UI" method="_on_x_speed_pressed"]
[connection signal="pressed" from="UI/HUD/GameButtons/GameControls/PauseButton" to="UI" method="_on_pause_button_pressed"]
[connection signal="timeout" from="UI/HUD/WaveLabel/Timer" to="UI" method="_on_timer_timeout"]
[connection signal="pressed" from="UI/LoseScreen/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/MainMenue" to="UI" method="_on_main_menue_pressed"]
[connection signal="pressed" from="UI/LoseScreen/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Retry" to="UI" method="_on_retry_pressed"]
[connection signal="pressed" from="UI/WinScreen/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/MainMenue" to="UI" method="_on_main_menue_pressed"]
[connection signal="pressed" from="UI/WinScreen/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/Retry" to="UI" method="_on_retry_pressed"]

[editable path="WorldMap"]
[editable path="UI/HUD/PauseMenue"]
[editable path="UI/LoseScreen"]
[editable path="UI/WinScreen"]
